...
                              ),
                              SizedBox(
                                width: 108,
                                child: Row(
                                  children: [
                                    action(
                                      'Play track',
                                      Icons.play_arrow,
                                      () => widget.play(index),
                                    ),
                                    if (widget.enqueue != null)
                                      action(
                                        'Add to queue',
                                        Icons.add,
                                        () => widget.enqueue!(index),
                                      ),
                                    if (widget.remove != null)
                                      action(
                                        'Remove from queue',
...
